--- a/OriginMap/OriginMap/Info.plist
+++ b/OriginMap/OriginMap/Info.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>baidumap</string>
+		<string>iosamap</string>
+	</array>
 	<key>NSLocationUsageDescription</key>
 	<string>获取位置信息权限</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
