--- a/ShareSDKDemo/ShareSDKDemo/Info.plist
+++ b/ShareSDKDemo/ShareSDKDemo/Info.plist
@@ -148,5 +148,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>小狗访问图片库</string>
 </dict>
 </plist>
